welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:10: error: not found: value nombres_occurences
    if (occurences==nombres_occurences){
                    ^golomb:14: error: not found: value nombres_occurences
                                                                                                														nombres_occurences = T(a_prendre+1)}
                                                                                                                                                                                                                ^